// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StackCard creates correct snapshot for Jupyer stack type 1`] = `
<WithStyles(Card)
  className="StackCard-card-1"
>
  <WithStyles(CardContent)>
    <div
      className="StackCard-cardHeader-2"
    >
      <div>
        <WithStyles(Typography)
          type="headline"
        >
          name1
        </WithStyles(Typography)>
        <div
          style={
            Object {
              "direction": "row",
              "display": "flex",
            }
          }
        >
          <WithStyles(Typography)
            style={
              Object {
                "marginRight": 6,
              }
            }
            type="subheading"
          >
            Jupyter
          </WithStyles(Typography)>
        </div>
      </div>
      <WithStyles(CardMedia)
        className="StackCard-cardMedia-3"
        image="jupyter-logo.svg"
      />
    </div>
    <WithStyles(Typography)
      component="p"
    >
      Web application that allows you to create and share documents that contain live code, equations, visualizations and explanatory text.
    </WithStyles(Typography)>
  </WithStyles(CardContent)>
</WithStyles(Card)>
`;

exports[`StackCard creates correct snapshot for Zeppelin stack type 1`] = `
<WithStyles(Card)
  className="StackCard-card-1"
>
  <WithStyles(CardContent)>
    <div
      className="StackCard-cardHeader-2"
    >
      <div>
        <WithStyles(Typography)
          type="headline"
        >
          name1
        </WithStyles(Typography)>
        <div
          style={
            Object {
              "direction": "row",
              "display": "flex",
            }
          }
        >
          <WithStyles(Typography)
            style={
              Object {
                "marginRight": 6,
              }
            }
            type="subheading"
          >
            Zeppelin
          </WithStyles(Typography)>
        </div>
      </div>
      <WithStyles(CardMedia)
        className="StackCard-cardMedia-3"
        image="zeppelin-logo.svg"
      />
    </div>
    <WithStyles(Typography)
      component="p"
    >
      Web-based notebook that enables data-driven, interactive data analytics and collaborative documents with SQL, Scala and more.
    </WithStyles(Typography)>
  </WithStyles(CardContent)>
</WithStyles(Card)>
`;

exports[`StackCard should provide defaults and hide actions if no stack is provided 1`] = `
<WithStyles(Card)
  className="StackCard-card-1"
>
  <WithStyles(CardContent)>
    <div
      className="StackCard-cardHeader-2"
    >
      <div>
        <WithStyles(Typography)
          type="headline"
        >
          Display Name
        </WithStyles(Typography)>
        <div
          style={
            Object {
              "direction": "row",
              "display": "flex",
            }
          }
        >
          <WithStyles(Typography)
            style={
              Object {
                "marginRight": 6,
              }
            }
            type="subheading"
          >
            Typename type
          </WithStyles(Typography)>
        </div>
      </div>
      <WithStyles(Icon)
        className="StackCard-cardIcon-4"
      >
        create
      </WithStyles(Icon)>
    </div>
    <WithStyles(Typography)
      component="p"
    >
      A description of the typeName purpose
    </WithStyles(Typography)>
  </WithStyles(CardContent)>
</WithStyles(Card)>
`;

exports[`StackCard should show status ad buttons when status is ready 1`] = `
<WithStyles(Card)
  className="StackCard-card-1"
>
  <WithStyles(CardContent)>
    <div
      className="StackCard-cardHeader-2"
    >
      <div>
        <WithStyles(Typography)
          type="headline"
        >
          name1
        </WithStyles(Typography)>
        <div
          style={
            Object {
              "direction": "row",
              "display": "flex",
            }
          }
        >
          <WithStyles(Typography)
            style={
              Object {
                "marginRight": 6,
              }
            }
            type="subheading"
          >
            Jupyter
          </WithStyles(Typography)>
          <WithStyles(StackStatus)
            status="ready"
          />
        </div>
      </div>
      <WithStyles(CardMedia)
        className="StackCard-cardMedia-3"
        image="jupyter-logo.svg"
      />
    </div>
    <WithStyles(Typography)
      component="p"
    >
      Web application that allows you to create and share documents that contain live code, equations, visualizations and explanatory text.
    </WithStyles(Typography)>
  </WithStyles(CardContent)>
  <StackCardActions
    deletePermission="delete"
    deleteStack={[Function]}
    editPermission="edit"
    openPermission="open"
    openStack={[Function]}
    stack={
      Object {
        "displayName": "name1",
        "id": "100",
        "status": "ready",
        "type": "jupyter",
      }
    }
    userPermissions={
      Array [
        "open",
        "delete",
        "edit",
      ]
    }
  />
</WithStyles(Card)>
`;
